bunch of updates

--- a/_includes/resume/experience.html
+++ b/_includes/resume/experience.html
@@ -10,6 +10,12 @@
         <h4 class="title">Software Engineering Instructor</h4>
         <span class="date"><abbr class="dtstart" title="2013-03-28">March 2013</abbr> - <abbr title="{{ present }}">present</abbr></span>
       </div>
+      <p>DevBootcamp is a for-profit education company, focused on helping people launch their career as web developers. At DevBootcamp I do a variety of things, primarily I am an instructor.</p>
+      <ul>
+        <li>I manage a class of 10-24 beginner developers. I deliver daily lectures and offer hands-on assistance to students working on lab challenges. On a weekly basis, I conduct assessments of students progress and provide them with feedback to help keep them on their ideal learning edge.</li>
+        <li>I participate in the creation and modification of the DBc curriculum, which includes material on basic Ruby, SQL, Sinatra, HTML, CSS, Javascript, jQuery, Rails, and a variety of other supporting technologies. The curriculum includes both lectures and challenges that teach DBc students the skills they need to become web developers.</li>
+        <li>I also facilitate Engineering Empathy lectures on Feedback, Super Ego, and Dropping The Water Line. These lectures are a core piece of developing well rounded developers.</li>
+      </ul>
     </li>
     <li class="vevent experience">
       <div class="vcard">
@@ -18,6 +24,26 @@
         <h4 class="title">Software Engineer</h4>
         <span class="date"><abbr class="dtstart" title="2011-01-09">January 2011</abbr> - <abbr class="dtend" title="2013-03-15">March 2013</abbr></span>
       </div>
+      <p>In the 2 years I worked at Groupon I played a variety of roles, working in teams ranging in size from 1 to 15 developers.</p>
+      <p><strong>Groupon Now!</strong> – Groupon's real-time, location based, mobile consumer application. This application changed the way that Groupon viewed the purchase process, as well as revolutionizing the merchant side of our sales operation.</p>
+      <ul>
+        <li>I was a founding member of the Groupon Now! team (at one point swelling to 16 members), and worked primarily on the front-end team.</li>
+        <li>I was responsible for delivering front end solutions for the consumer website, as well as the merchant facing website.</li>
+        <li>I was also lead and effort to design, develop, and deploy Groupon's first discounting system. This system allowed Groupon's Marketing team to target and control incentives to boost customer engagement. This system was responsible for a sizeable lift in sales and customer engagement; earning Groupon more money, while reducing customer service and marketing related to running targeted marketing campaigns.</li>
+      </ul>
+
+      <p><strong>Groupon Goods</strong> – Groupon's retail product application. This product represented a shift in focus from local customer experiences with small businesses, to a more holistic consumer experience.</p>
+      <ul>
+        <li>I was a founding member of the team that carved Goods into it's own specific set of features, after it was launched as an experiment on the main Groupon system.</li>
+        <li>I was the primary developer and technical lead, who delivered the shipping collection system for Goods. This project closed a major hole in the overall business; stopping the product from losing roughly 60% of customers who originally bought the Goods deals, but never redeemed them. This translates into more than $100M per quarter in eliminated breakage.</li>
+      </ul>
+
+      <p><strong>Quantum Lead</strong> – This product revolutionized the way that Groupon manages their sales staff. It is a first of its kind Sales Pipeline Optimization Engine, which contributed to an 8% lift in overall deal quality and translates directly to Groupon's bottom line as increased revenue.</p>
+      <ul>
+        <li>I founded this team, with 2 other technical leads. I eventually became the single tech lead for the team of 10.</li>
+        <li>The system was built of composable parts, leveraging both JRuby and  Clojure for various components. The system design emerged from the sheer number of external dependencies and necessary reliability constraints our system had on those dependencies. The design allowed us to treat external dependencies as local, and served to remove bottlenecks that otherwise would have made a process like this impossible.</li>
+        <li>As technical lead, I was also responsible for participating in the interview process for new developers joining the Sales Tools teams. In this role, I interviewed ~20 developers for various roles ranging from Director to Junior Developer.</li>
+      </ul>
     </li>
     <li class="vevent experience">
       <div class="vcard">
@@ -26,6 +52,8 @@
         <h4 class="title">Software Engineer</h4>
         <span class="date"><abbr class="dtstart" title="2010-09-29">September 2010</abbr> - <abbr class="dtend" title="2011-09-06">August 2011</abbr></span>
       </div>
+      <p>At Obtiva, I had the opportunity to work on a variety of studio projects, with clients ranging from early stage startups to established marketing companies. I worked in small teams (pairs), to deliver software every two weeks to these clients that included new websites, payment collection systems, and various line-of-business features for existing websites.</p>
+      <p>I also joined Groupon as a staff consultant through Obtiva. This experience is outlined above.</p>
     </li>
     <li class="vevent experience">
       <div class="vcard">
