--- a/_includes/resume/skills.html
+++ b/_includes/resume/skills.html
@@ -1,9 +1,9 @@
 <div id="skills" class="section">
-  <h2>Skills</h2>
+  <h2>Skills <!-- Buzzword Bingo --></h2>
   <h3>Languages <span class="amp">&amp;</span> Frameworks</h3>
   <dl>
     <dt>Advanced</dt>
-    <dd><acronym title="Asynchronous Javascript + XML">AJAX</acronym>, <acronym title="Cascading Style Sheets">CSS</acronym>, Java, JavaScript, jQuery, <acronym title="JavaServer Pages">JSP</acronym>, Prototype, Ruby/<abbr title="Ruby on Rails">Rails</abbr>, Struts 1/2, <acronym title="Structured Query Language">SQL</acronym>, <acronym title="Hypertext Markup Language">HTML</acronym>/<acronym title="Extensible Hypertext Markup Language">XHTML</acronym></dd>
+    <dd><acronym title="Asynchronous Javascript + XML">AJAX</acronym>, <acronym title="Cascading Style Sheets">CSS</acronym>, Java, JavaScript, jQuery, <acronym title="JavaServer Pages">JSP</acronym>, Prototype, Ruby/<abbr title="Ruby on Rails">Rails</abbr>, Sinatra, Struts 1/2, <acronym title="Structured Query Language">SQL</acronym>, <acronym title="Hypertext Markup Language">HTML</acronym>/<acronym title="Extensible Hypertext Markup Language">XHTML</acronym></dd>
 
     <dt>Intermediate</dt>
     <dd>C/C++, <acronym title="Hypertext Preprocessor">PHP</acronym>, Wordpress</dd>
@@ -18,11 +18,10 @@
 
   <h3>Development Enviroment</h3>
   <ul>
-    <li>&#63743; MacBook Pro (OS X 10.6)</li>
+    <li>&#63743; Mac OS X</li>
     <li><a href="http://github.com/mikelikesbikes/dotfiles/">bash</a></li>
     <li>vim</li>
     <li>Chrome</li>
     <li>Git/<a href="http://github.com/mikelikesbikes/">Github</a></li>
-    <li>Photoshop CS4</li>
   </ul>
 </div>
