--- a/_includes/resume/skills.html
+++ b/_includes/resume/skills.html
@@ -16,7 +16,7 @@
 
   </dl>
 
-  <h3>Development Enviroment</h3>
+  <h3>Development Environment</h3>
   <ul>
     <li>&#63743; Mac OS X</li>
     <li><a href="http://github.com/mikelikesbikes/dotfiles/">bash</a></li>
