--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -9,6 +9,6 @@
     <li><a href="http://delicious.com/mikelikesbikes" title="I reading lots of news.">Delicious</a></li>
     <li><a href="http://github.com/mikelikesbikes" title="I code in public.">Github</a></li>
     <li class="hidden print">Phone: <span class="tel">(614) 506-3327</span></li>
-    <li id="download_vcard"><a href="http://h2vx.com/vcf/{{ site.url }}resume" title="Add me to your Address Book">My Card (click to download)</a></li>
+    <li id="download_vcard"><a href="http://h2vx.com/vcf/http://mikelikesbikes.com/resume/" title="Add me to your Address Book">My Card (click to download)</a></li>
   </ul>
 </div>
