add director of education to dbc

--- a/_includes/resume/experience.html
+++ b/_includes/resume/experience.html
@@ -16,6 +16,17 @@
         <li>I participate in the creation and modification of the DBc curriculum, which includes material on basic Ruby, SQL, Sinatra, HTML, CSS, Javascript, jQuery, Rails, and a variety of other supporting technologies. The curriculum includes both lectures and challenges that teach DBc students the skills they need to become web developers.</li>
         <li>I also facilitate Engineering Empathy lectures on Feedback, Super Ego, and Dropping The Water Line. These lectures are a core piece of developing well rounded developers.</li>
       </ul>
+
+      <div class="vcard">
+        <a href="mike_busch" class="include" title="Mike Busch"></a>
+        <h4 class="title">Director of Education</h4>
+        <span class="date"><abbr class="dtstart" title="2014-02-25">March 2014</abbr> - <abbr title="2014-08-31">August 2014</abbr></span>
+      </div>
+      <ul>
+        <li>I managed a part-time team of teachers to develop and maintain the curriculum used in the core program at DevBootcamp.</li>
+        <li>My focus was on enhancing collaboration between the 3 offices (New York, San Francisco, and Chicago). At the time I left this role we were routinely conducting cross-location meetings that helped teachers share experiences and creating a culture of learning.</li>
+        <li>I participated in acquisitions talks with DevBootcamp's parent company, Kaplan. I represented both roles as a Teacher and the Director of Education in these talks.</li>
+      </ul>
     </li>
     <li class="vevent experience">
       <div class="vcard">
