update other sections

--- a/_includes/resume/honors_and_certs.html
+++ b/_includes/resume/honors_and_certs.html
@@ -8,5 +8,6 @@
     <li>Awarded <acronym title="Boy Scouts of America">BSA</acronym> Eagle Scout Mentoring Award <span class="date">June 2005</span></li>
 
     <li>Awarded <acronym title="Boy Scouts of America">BSA</acronym> Eagle Scout Award <span class="date">December 2000</span></li>
+    <li>Awarded <acronym title="Boy Scouts of America">BSA</acronym> Order of the Arrow Brotherhood Honor <span class="date">August 2000</span></li>
   </ul>
 </div>
