update gems, ruby, and deployment to heroku

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -38,7 +38,7 @@
     <div id="shadow_fix"></div>
 
     <div id="footer">
-      &copy; <a href="http://mikelikesbikes.com/">mikelikesbikes.com</a> {{ site.time | date: "%Y" }}. Proudly hosted on <a href="http://github.com/">Github</a>.
+      &copy; <a href="http://mikelikesbikes.com/">mikelikesbikes.com</a> {{ site.time | date: "%Y" }}. Proudly hosted on <a href="http://heroku.com/">Heroku</a>.
     </div>
   </div>
 
