--- a/_includes/resume/experience.html
+++ b/_includes/resume/experience.html
@@ -8,7 +8,7 @@
         <a href="mike_busch" class="include" title="Mike Busch"></a>
         <h3 class="org">Dev Bootcamp</h3>
         <h4 class="title">Cultivator of Curiosity</h4>
-        <span class="date"><abbr class="dtstart" title="2013-03-28">March 2013</abbr> - <abbr title="{{ present }}">present</abbr></span>
+        <span class="date"><abbr class="dtstart" title="2013-03-28">March 2013</abbr> - <abbr class="dtend" title="2016-07-15">July 2016</abbr></span>
       </div>
       <p>DevBootcamp is a for-profit education company, focused on helping people launch their career as web developers. At DevBootcamp I do a variety of things, primarily I am an instructor.</p>
       <ul>
