--- a/_includes/resume/overview.html
+++ b/_includes/resume/overview.html
@@ -1,4 +1,4 @@
 <div id="overview" class="section summary">
   <h2>Overview</h2>
-  <p>I'm a web developer, who loves crafting beautiful, highly interactive websites. I'm also an educator, who loves unlocking the potential of people entering the programming world. I want to work with and learn from the most talented craftsmen in our industry to change the way people use the web.</p>
+  <p>I'm a software engineer, who loves creating and testing high performance solutions to challenging business problems. I'm an educator, who loves unlocking the potential of people entering the programming world. I want to work with and learn from the most talented and diverse people in our industry to change the way software is developed.</p>
 </div>
