--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -27,7 +27,7 @@
       <div id="wrap">
         <h1>Hi... I'm <a class="fn url" href="http://mikelikesbikes.com">Mike Busch</a>!</h1>
         <h2 class="note">
-          I'm a <em>software engineer and educator</em> in <span class="adr"><span class="locality">Chicago</span>, <span class="region">Illinois</span></span>. Here's a little bit more about me.
+          I'm a <em>software engineer and educator</em> in <span class="adr"><span class="locality">Columbus</span>, <span class="region">Ohio</span></span>. Here's a little bit more about me.
         </h2>
 
         {{ content }}
