--- a/_includes/resume/experience.html
+++ b/_includes/resume/experience.html
@@ -7,7 +7,8 @@
       <div class="vcard">
         <a href="mike_busch" class="include" title="Mike Busch"></a>
         <h3 class="org">Heroku</h3>
-        <h4 class="title">Lead Software Engineer - Core Services</h4>
+        <h4 class="title">Lead Software Engineer - Runtime Control Plane</h4>
+        <h4 class="title">Lead Software Engineer - Web Services</h4>
         <span class="date"><abbr class="dtstart" title="2016-07-29">July 2016</abbr> - <abbr class="dtstart" title="{{ present }}">present</abbr></span>
       </div>
       <p>Heroku is a cloud based Platform as a Service provider, owned by Salesforce.</p>
@@ -16,7 +17,7 @@
       <div class="vcard">
         <a href="mike_busch" class="include" title="Mike Busch"></a>
         <h3 class="org">Dev Bootcamp</h3>
-        <h4 class="title">Cultivator of Curiosity</h4>
+        <h4 class="title">Lead Instructor</h4>
         <span class="date"><abbr class="dtstart" title="2013-03-28">March 2013</abbr> - <abbr class="dtend" title="2016-07-15">July 2016</abbr></span>
       </div>
       <p>DevBootcamp is a for-profit education company, focused on helping people launch their career as web developers. At DevBootcamp I do a variety of things, primarily I am an instructor.</p>
